--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,6 @@
 [.ShellClassInfo]
-IconResource=C:\Windows\System32\SHELL32.dll,27
+IconResource=C:\Windows\System32\SHELL32.dll,41
+[ViewState]
+Mode=
+Vid=
+FolderType=Documents
