--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
+  permission_handler: ^11.0.0
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.2
